# luanti

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: android.yml  cpp_lint.yml  docker_image.yml  ios.yml  linux.yml  lua.yml  lua_api_deploy.yml  macos.yml  png_file_checks.yml  whitespace_checks.yml  windows.yml
builtin/: CMakeLists.txt  settingtypes.txt
builtin/async/: CMakeLists.txt
builtin/client/: CMakeLists.txt
builtin/common/: CMakeLists.txt  item_s.lua
builtin/common/settings/: CMakeLists.txt  dlg_settings.lua
builtin/emerge/: CMakeLists.txt
builtin/fstk/: CMakeLists.txt  ui.lua
builtin/game/: CMakeLists.txt  features.lua  item.lua  misc_s.lua  register.lua
builtin/mainmenu/: CMakeLists.txt  dlg_register.lua  dlg_version_info.lua  tab_local.lua  tab_online.lua
builtin/mainmenu/content/: CMakeLists.txt
builtin/pause_menu/: CMakeLists.txt
builtin/profiler/: CMakeLists.txt
clientmods/preview/: init.lua
cmake/Modules/: HashBuiltinFiles.cmake
doc/: breakages.md  client_lua_api.md  lgpl-2.1.txt  lua_api.md  menu_lua_api.md  world_format.md
doc/compiling/: README.md  ios.md  macos.md  windows.md  windows_msys2.md
irr/: .gitignore  README.md
irr/include/: AnimSpec.h  AnimatedMeshSceneNode.h  IAnimatedMesh.h  ICursorControl.h  (+13 more)
src/: CMakeLists.txt  activeobject.cpp  activeobject.h  builtin_files.cpp.in  builtin_files.h  cmake_config.h.in  collision.cpp  collision.h  config.h  craftdef.cpp  craftdef.h  defaultsettings.cpp  environment.cpp  exceptions.h  filesys.cpp  filesys.h  gameparams.h  guid.cpp  guid.h  httpfetch.cpp  hud_element.cpp  hud_element.h  inventory.cpp  lighting.h  main.cpp  map.h  mapblock.cpp  mapblock.h  mapnode.cpp  mapnode.h  migratesettings.h  nodedef.cpp  nodedef.h  nodemetadata.cpp  nodemetadata.h  objdef.h  pathfinder.cpp  player.cpp  player.h  porting.cpp  (+17 more)
(+258 files in other folders)
